var searchData=
[
  ['unauthenticated_0',['UNAUTHENTICATED',['../namespacecatena.html#a8883f03e942ef610b66860d5b52f8d85af18664e91a646f1caacab6e8797b4734',1,'catena']]],
  ['unavailable_1',['UNAVAILABLE',['../namespacecatena.html#a8883f03e942ef610b66860d5b52f8d85a374ac00d9beb2a41ba6dd3940deebc4e',1,'catena']]],
  ['unhandled_5fexception_2',['unhandled_exception',['../structcatena_1_1common_1_1Device_1_1DeviceSerializer_1_1promise__type.html#a7fd6ffdcb1292ce82df205603f56d729',1,'catena::common::Device::DeviceSerializer::promise_type::unhandled_exception()'],['../structcatena_1_1common_1_1ParamDescriptor_1_1CommandResponder_1_1promise__type.html#a65ac3f86d08630057799235974c1ab0f',1,'catena::common::ParamDescriptor::CommandResponder::promise_type::unhandled_exception()']]],
  ['unimplemented_3',['UNIMPLEMENTED',['../namespacecatena.html#a8883f03e942ef610b66860d5b52f8d85a6f38e6fade54bc708b875c87d4ccb38f',1,'catena']]],
  ['unknown_4',['UNKNOWN',['../namespacecatena.html#a8883f03e942ef610b66860d5b52f8d85a64f74f4db3f30834d9c20a90a8dc40e9',1,'catena']]],
  ['unpop_5',['unpop',['../classcatena_1_1common_1_1Path.html#a25a93d0ba88442cb581c0c73a66a3a82',1,'catena::common::Path']]],
  ['unprocessable_5fentity_6',['UNPROCESSABLE_ENTITY',['../namespacecatena.html#a8883f03e942ef610b66860d5b52f8d85a68df7493cc4c2eb86af4425169357317',1,'catena']]],
  ['up_20and_20running_7',['Setting up and Running',['../md__2home_2runner_2work_2Catena_2Catena_2sdks_2cpp_2docs_2docker-cpp.html#autotoc_md14',1,'']]],
  ['up_20catena_20service_20s_20with_20docker_8',['Setting up Catena Service(s) with Docker',['../md__2home_2runner_2work_2Catena_2Catena_2sdks_2cpp_2docs_2docker-cpp.html#autotoc_md15',1,'']]],
  ['update_20node_20if_20required_9',['update node if required',['../md__2home_2runner_2work_2Catena_2Catena_2sdks_2cpp_2docs_2linux__toolchain.html#autotoc_md26',1,'Update node if required'],['../md__2home_2runner_2work_2Catena_2Catena_2sdks_2cpp_2docs_2cross__compiling.html#autotoc_md7',1,'Update node if required']]],
  ['updateresponse_5f_10',['updateresponse_',['../classcatena_1_1common_1_1IConnect.html#a13d36e283fe2780d001042aacca872c6',1,'catena::common::IConnect::updateResponse_(const ILanguagePack *l, uint32_t slot)=0'],['../classcatena_1_1common_1_1IConnect.html#a5c5fc96d2da16542c86e443085894182',1,'catena::common::IConnect::updateResponse_(const std::string &amp;oid, const IParam *p, uint32_t slot)=0'],['../classcatena_1_1common_1_1Connect.html#a79a548ee8b6b66ed2b9b1dbb29bf77d1',1,'catena::common::Connect::updateResponse_(const ILanguagePack *l, uint32_t slot) override'],['../classcatena_1_1common_1_1Connect.html#a8ff9c432f5f47f67746433d1827fd19d',1,'catena::common::Connect::updateResponse_(const std::string &amp;oid, const IParam *p, uint32_t slot) override']]],
  ['updatesubscriptions_11',['updatesubscriptions',['../classcatena_1_1gRPC_1_1UpdateSubscriptions.html#a32510d4d6e03095a7af9bda27e8dd3c7',1,'catena::gRPC::UpdateSubscriptions::UpdateSubscriptions()'],['../classcatena_1_1gRPC_1_1UpdateSubscriptions.html',1,'catena::gRPC::UpdateSubscriptions']]],
  ['updatesubscriptions_2eh_12',['UpdateSubscriptions.h',['../UpdateSubscriptions_8h.html',1,'']]],
  ['use_20the_20rest_20connection_20manager_13',['Install boost libraries if you want to use the REST connection manager',['../md__2home_2runner_2work_2Catena_2Catena_2sdks_2cpp_2docs_2linux__toolchain.html#autotoc_md27',1,'']]],
  ['useragent_5f_14',['userAgent_',['../classcatena_1_1common_1_1Connect.html#af65f3d8646574a41942a3f68106a8a2f',1,'catena::common::Connect']]],
  ['using_20docker_20with_20the_20catena_20c_20sdk_15',['Using Docker With The Catena C++ SDK',['../md__2home_2runner_2work_2Catena_2Catena_2sdks_2cpp_2docs_2docker-cpp.html',1,'']]],
  ['using_20the_20rest_20connection_20manager_16',['Install boost if using the REST connection manager',['../md__2home_2runner_2work_2Catena_2Catena_2sdks_2cpp_2docs_2windows__toolchain.html#autotoc_md47',1,'']]],
  ['utils_2eh_17',['utils.h',['../utils_8h.html',1,'']]]
];
